# panda-plugins

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.txt  README.md
plugins/: CMakeLists.txt  Macros.cmake
plugins/apicall_tracer/: CMakeLists.txt  apicall_tracer.cc  apicall_tracer.h  trace_filter.cc  trace_filter.h
plugins/apicall_tracer/process/: block.cpp  block.h  common.h  image.cpp  image.h  process.cpp  process.h  range.cpp  range.h  vad.cpp  vad.h
plugins/apicall_tracer/reporting/: reporting.cc  reporting.h  sqlite_model.cc  sqlite_model.h
plugins/apicall_tracer/trace_engine/: current_process_osi.cc  current_process_osi.h  syscall_cb.cc  syscall_cb.h  syscall_dispatcher.cc  syscall_dispatcher.h  syscall_manager.cc  syscall_manager.h  trace_engine.cc  trace_engine.h
plugins/bbstats/: CMakeLists.txt  README.md  bbstats.cpp  block.cpp  block.h  filter.cpp  filter.h  image.cpp  image.h  process.cpp  process.h
plugins/callstack/: CMakeLists.txt  USAGE.md  callstack.cpp  callstack.h  prog_point.h
plugins/dependencies/: CMakeExternal.cmake
plugins/dependencies/panda/: CMakeLists.txt
plugins/dependencies/panda-wrapper/: CMakeLists.txt
plugins/ipanda/: CMakeLists.txt  ipanda.cc  ipanda.h  manager.h  panda_x86.cpp  panda_x86.h  types.h
plugins/ipanda/managers/: linux3.cc  linux_common.cc  windows7.cc  windows_common.cc
plugins/ipanda/memory/: pandamemory.cc  pandamemory.h
plugins/ipanda/stringify/: stringify_common.cc  stringify_common.h
plugins/ipanda/stringify/linux/: linux3_stringifier.cc  linux3_stringifier.h
plugins/ipanda/stringify/windows/: win7_enum.cc  win7_enum.h  win7_objects.cc  win7_objects.h  win7_stringifier.cc  win7_stringifier.h
plugins/logging_events/: logging_events.cpp  logging_events.h
plugins/memory_regions/: CMakeLists.txt  memory_regions.cpp  metadata.h  region.cpp  region.h
plugins/net/: CMakeLists.txt
plugins/network/: CMakeLists.txt
plugins/network_pcap/: CMakeLists.txt  README.md  network_pcap.cpp
plugins/pmemdump/: CMakeLists.txt  pmemdump.cpp
plugins/process_introspection/: CMakeLists.txt  README.md  process_introspection.cpp  process_tracker.cpp  process_tracker.h
plugins/res/: CMakeLists.txt  linux_syscalls.db  windows_calls.db  windows_syscalls.db
plugins/syscall_tracer/: CMakeLists.txt  README.adoc  README.md  syscall_tracer.cc  syscall_tracer.h
plugins/syscall_tracer/reporting/: reporting.cc  reporting.h  sqlite_model.cc  sqlite_model.h
plugins/syscall_tracer/trace_engine/: syscall_cb.cc  syscall_cb.h  syscall_dispatcher.cc  syscall_dispatcher.h  syscall_manager.cc  syscall_manager.h  trace_engine.cc  trace_engine.h
plugins/typesignature/: CMakeLists.txt  arguments.h  find_syscall_database.cc  find_syscall_database.h  osi_syscalls.cc  osi_syscalls.h  syscall_database.cc  syscall_database.h  tuple_hash.h
plugins/volatility/: .gitignore  CMakeLists.txt  README.md  filter.cc  filter.h  memory-server.cc  memory-server.h  volatility.cc  volglue.py
